k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: webrom
spec:
  type: NodePort
  selector:
    app: allpodd
    component: web
  ports:
    - name: web
      nodePort: 32199
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: approm
spec:
  type: NodePort
  selector:
    app: allpodd
    component: app
  ports:
    - name: app
      nodePort: 30921
      port: 81
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: bidrag-db
  namespace: bidragsrom
spec:
  selector:
    app: allpodd
    component: bidrag-db
  ports:
    - name: http
      port: 8082
      targetPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: pseudonym-db
  namespace: pseudonymrom
spec:
  selector:
    app: allpodd
    component: pseudonym-db
  ports:
    - name: http
      port: 8083
      targetPort: 8083
